--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="https://www.google.com" target="_blank" style="color: black;">Google<br></a>
 
     <nav>
-    <img width="560" height="315" src="/img/cr7.gif" alt="CR7">
-    <img width="560" height="315" src="/img/messi.gif" alt="Messi"> <br>
+    <img width="560" height="315" src="img/cr7.gif" alt="CR7">
+    <img width="560" height="315" src="img/messi.gif" alt="Messi"> <br>
     </nav>
     <audio controls>
         <source src="/audio/so-fresh-315255.mp3" type="audio/mpeg">
